Fix #142 - update to the latest requirements.  Change warning, info, etc for various steps, removed un-need code/checks per requirements.  Update SPNModule to be accurate based on new requirements.